--- a/web/405.html
+++ b/web/405.html
@@ -13,7 +13,7 @@
         <h4 data-text="405 forbidden">405 Method Not Allowed</h4>
         <p>Sorry, the method is not allowed</p>
         <div class="btns">
-            <a href="index.html">return home</a>
+            <a href="/">return home</a>
         </div>
     </div>
 </div>
