--- a/web/403.html
+++ b/web/403.html
@@ -13,7 +13,7 @@
         <h4 data-text="403 forbidden">403 forbidden</h4>
         <p>Sorry, the access is prohibited</p>
         <div class="btns">
-            <a href="index.html">return home</a>
+            <a href="/">return home</a>
         </div>
     </div>
 </div>
