--- a/web/RootShowUsers.html
+++ b/web/RootShowUsers.html
@@ -15,7 +15,7 @@
         <button class="bt_logout">登出</button>
     </form>
 
-    <button class="bt_menu" onclick="window.location.href = 'RootPage.html'">菜单</button>
+    <button class="bt_menu" onclick="window.location.href = 'RootPage'">菜单</button>
 
     <button class="bt_add" onclick="popout_RSU()">增添用户</button>
 
