--- a/web/400.html
+++ b/web/400.html
@@ -13,7 +13,7 @@
         <h4 data-text="400 forbidden">400 Bad Request</h4>
         <p>Sorry, there is a syntax problem in the request or the request cannot be fulfilled</p>
         <div class="btns">
-            <a href="/">return home</a>
+            <a href="/NetDisk/">return home</a>
         </div>
     </div>
 </div>
