--- a/web/404.html
+++ b/web/404.html
@@ -13,7 +13,7 @@
         <h4 data-text="Opps! Page not found">Opps! Page not found</h4>
         <p>Sorry, the page you're looking for doesn't exist.</p>
         <div class="btns">
-            <a href="/">return home</a>
+            <a href="/NetDisk/">return home</a>
         </div>
     </div>
 </div>
